law complete now religious

--- a/src/app/modules/solutions/law/law.component.html
+++ b/src/app/modules/solutions/law/law.component.html
@@ -62,98 +62,141 @@
             Full-service offers
         </h2> 
         <div class="flex1">
-            <div class="flex1-words flex1-words-p">
+            <div class="flex1-words flex1-words-p law-center">
                 <h2 class="h2-offers">
-                    Let Proscene's production team create your content
+                    Planning
                 </h2>
                 <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                    You can create and manage your digital signage content if you have creative resources available. Keep in mind that high-quality content must be created to display correctly on displays of assorted sizes and screen orientations
+                    We meet as early as possible in the project process to ensure we understand your operations, clients, and culture. This allows us to recommend tools that best support your teams and create optimal user experiences.
                 </p>
-                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                    Get inspired by <a style="color: rgb(17, 105, 236);">LG Direct View LED digital signage</a>. We work with you to determine the best displays for your needs.
-                </p>
-                <div class=" pt-6 pb-6">
-                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Dicover more
-                        ></a>
-                </div>
 
             </div>
             <div class="images images-back11">
                 <img src="" alt="" srcset="">
             </div>
         </div>
-        <div class="flex1">
+        <div class="flex1 law-center">
             <div class="images images-back2">
                 <img src="" alt="" srcset="">
             </div>
 
-            <div class="flex1-words flex1-words-p">
+            <div class="flex1-words flex1-words-p law-center">
                 <h2 class="h2-offers">
-                    Signage content and viewer analytics
+                    Deployment
                 </h2>
                 <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
-                    Effective digital signage campaigns need consistently fresh content, tracking, and technology support. Proscene provides complete solutions to help you boost engagement and drive sales.
+                    Our team installs and configures solutions in your collaboration spaces. We make sure tools support common cloud-based conferencing platforms and can even train users on the new technology.
                 </p>
-                <div class=" pt-6 pb-6">
-                    <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">Explore digital signage content
-                        ></a>
-                </div>
-
             </div>
         </div>
         
-        <div class="solutions1">
-            <div class="cards-solutions">
-                <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
-                    <h2 class="h2-offers" style="padding-inline: 0.8rem;">
-                        Learn more
-                    </h2>
-                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions">
-                        Learn more about digital signage and video wall solutions.
-                    </p>
-                    <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Sharp NEC Display Solutions ></a>
-                    </div>
-                    <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">LG Electronics ></a>
-                    </div>
-                    <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Samsung ></a>
-                    </div>
-                    <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Sony ></a>
-                    </div>
-                    <div class=" pt-6 pb-6">
-                        <a routerLink="" class="width: 90%; padding-block">Peerless-AV ></a>
-                    </div>
-                    <div class="pb-9"><a routerLink="" class="demo-button">See all tech partners</a></div>
+        <div class="flex1 law-center">
+            <div class="flex1-words flex1-words-p law-center">
+                <h2 class="h2-offers">
+                    Operation
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Proscene maintains the tools that provide reliable communication for depositions, arbitration, court hearings, client meetings, and internal collaboration. With managed services, our teams provide ongoing support and optimization that ensure technology runs smoothly and as intended. We help prevent technology failures and inefficiencies that could damage relationships with clients, as well as your firm’s reputation.
+                </p>
 
+            </div>
+            <div class="images images-back11 law-center">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
+        <div class="pb-9 center"><a routerLink="/contact-us" class="demo-button">Contact us </a></div>
+        <div id="complete">
+            <h2 class="h2-offers text-center" style="color: #fff;">
+                Complete Proscene UCC solutions
+            </h2> 
+            <div class="flex1 law-center">
+                <div class="images images-back2">
+                    <img src="" alt="" srcset="">
+                </div>
+    
+                <div class="flex1-words flex1-words-p law-center">
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                        Supplying law firms with reliable technology to ensure meetings run smoothly and feature modern capabilities isn’t the only thing we do. Proscene designs integrated UCC ecosystems that are easy to use, provide superior user and client experiences, and are compatible with the cloud-based collaboration solutions you prefer to use.
+                    </p>
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                        Partnering with top-quality brands, we provide solutions for law firms that include:
+                    </p>
+                        <ul>
+                            <li>> Smart cameras, smart microphones, and loudspeakers.</li>
+                            <li>> High-resolution displays and projectors.</li>
+                            <li>> Enhance your reputation with modern tools and capabilities.</li>
+                        </ul>
+                    
                 </div>
             </div>
-            <div class="cards-solutions">
-                <div class="card1" style="box-shadow: 0px 0px 10px 2px rgba(128, 128, 128, 0.5);">
-                    <h2 class="h2-offers" style="padding-inline: 0.8rem;">
-                        Shop now
-                    </h2>
-                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions ">
-                        Shop for digital signage and video wall displays.
-                    </p>
-                    <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions 55” LED 3×3 Video Wall Bundle ></a>
+        </div>
+        <h2 class="h2-offers text-center">
+            Benefits to your firm
+        </h2>
+        
+        <div class="wordsdigital-container">
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                Our team installs and configures solutions in your collaboration spaces. We make sure tools support common cloud-based conferencing platforms and can even train users on the new technology.
+            </p>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                Our end-to-end management and preventive maintenance solution helps lower costs and improve your technology reliability.
+            </p>
+            <div class="wordsdigital">
+                <div class="cardd">
+                    <ul>
+                        <li>> Improve reliability and user experience.</li>
+                        <li>> Meet client needs with compatible technologies.</li>
+                        <li>> Enhance your reputation with modern tools and capabilities.</li>
+                        <li>> Attract and retain top legal talent with modern and efficient tools.</li>
+                        <li>> Achieve regulatory compliance and secure client information.</li>
+                    </ul>
+                </div>
+                    <div class="cardd">
+                        <ul>
+                            <li>> Augment your IT teams’ skill sets with specialized expertise and resources.</li>
+                            <li>> Managed services keep tools running as expected.</li>
+                            <li>> Standardize solutions to support growth and ease of use.</li>
+                            <li>> Enable interoperability between cloud-based UC platforms.</li>
+            
+                        </ul>
                     </div>
-                    <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">LG Electronics 75” Non-Glare HD Display ></a>
+                </div>
+        </div>
+        <div class="partner-section">
+            <h3 class="h2-offers center pt-3 pb-4">We partner with leading collaboration providers
+            </h3>
+            <div class="partner-images pb-9">
+                <div class="container-p-img">
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
                     </div>
-                    <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Barco Unisee 55″ bezel-less tiled LCD video wall' ></a>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
                     </div>
-                    <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Samsung 85” 4K UHD Commercial Display ></a>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
                     </div>
-                    <div class=" pt-6 pb-6 padding-block">
-                        <a routerLink="" class=" width: 90%;">Sharp NEC Display Solutions MultiSync® LCD 55” Video Wall Display ></a>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
                     </div>
-                    <div class="pb-9"><a routerLink="" class="demo-button">Shop our catalog hardware</a></div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
                 </div>
             </div>
         </div>
