--- a/src/app/modules/solutions/religious/religious.component.html
+++ b/src/app/modules/solutions/religious/religious.component.html
@@ -1,1 +1,242 @@
-<p>religious works!</p>
+<div class="body">
+    <app-navbar></app-navbar>
+    <header class="hero">
+        <div class="container">
+            <div class="container-words">
+                <h1 class="hero-title pb-3">Secure, reliable audio visual communications solutions for law firms.</h1>
+                <p class="hero-p2 header-p pt-2">
+                    Equip your law firm with modern AV and UCC technologies
+                </p>
+                <a routerLink="" class="demo-button">Explore</a>
+            </div>
+            <img src="https://img.freepik.com/premium-photo/law-legal-system-justice-crime-concept-mallet-gavel-hammer-scales-table-d-render-illustration_628331-196.jpg" alt="" class="hero-image" srcset="">
+        </div>
+    </header>
+    <div class="flex1">
+        <div class="images images-back1">
+            <img src="" alt="" srcset="">
+        </div>
+        <div class="flex1-words flex1-words-p">
+            <h2 class="h2-offers">
+                Let our certified experts plan, deploy, and operate your conferencing technology.
+            </h2>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                Proscene's audiovisual (AV) and unified communications and collaboration (UCC) technology services help your law firm equip spaces with quality technologies that support time-sensitive, high-value legal work. Our teams can help you:
+            </p>
+                <ul>
+                    <li> > Equip your spaces with modern UCC technologies.</li>
+                    <li> > Meet security and compliance requirements.</li>
+                    <li> > Ensure your technology continues to run efficiently.</li>
+                </ul>
+            <div class=" pt-6 pb-6">
+                <a routerLink="/contact-us" class="padding-block flex1a " style="padding-left: 0;">contact us
+                    ></a>
+            </div>
+
+        </div>
+    </div>
+    <h2 class="h2-offers text-center">
+        Benefits to your firm
+    </h2>
+    <div class="wordsdigital">
+        <div class="cardd">
+            <ul>
+                <li>> Improve reliability and user experience.</li>
+                <li>> Meet client needs with compatible technologies.</li>
+                <li>> Enhance your reputation with modern tools and capabilities.</li>
+                <li>> Attract and retain top legal talent with modern and efficient tools.</li>
+                <li>> Achieve regulatory compliance and secure client information.</li>
+            </ul>
+        </div>    
+            <div class="cardd">
+                <ul>
+                    <li>> Augment your IT teams’ skill sets with specialized expertise and resources.</li>
+                    <li>> Managed services keep tools running as expected.</li>
+                    <li>> Standardize solutions to support growth and ease of use.</li>
+                    <li>> Enable interoperability between cloud-based UC platforms.</li>
+                    
+                </ul>
+            </div>
+        </div>
+        <h2 class="h2-offers text-center">
+            Full-service offers
+        </h2> 
+        <div class="flex1">
+            <div class="flex1-words flex1-words-p law-center">
+                <h2 class="h2-offers">
+                    Planning
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    We meet as early as possible in the project process to ensure we understand your operations, clients, and culture. This allows us to recommend tools that best support your teams and create optimal user experiences.
+                </p>
+
+            </div>
+            <div class="images images-back11">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
+        <div class="flex1 law-center">
+            <div class="images images-back2">
+                <img src="" alt="" srcset="">
+            </div>
+
+            <div class="flex1-words flex1-words-p law-center">
+                <h2 class="h2-offers">
+                    Deployment
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Our team installs and configures solutions in your collaboration spaces. We make sure tools support common cloud-based conferencing platforms and can even train users on the new technology.
+                </p>
+            </div>
+        </div>
+        
+        <div class="flex1 law-center">
+            <div class="flex1-words flex1-words-p law-center">
+                <h2 class="h2-offers">
+                    Operation
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                    Proscene maintains the tools that provide reliable communication for depositions, arbitration, court hearings, client meetings, and internal collaboration. With managed services, our teams provide ongoing support and optimization that ensure technology runs smoothly and as intended. We help prevent technology failures and inefficiencies that could damage relationships with clients, as well as your firm’s reputation.
+                </p>
+
+            </div>
+            <div class="images images-back11 law-center">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
+        <div class="pb-9 center"><a routerLink="/contact-us" class="demo-button">Contact us </a></div>
+        <div id="complete">
+            <h2 class="h2-offers text-center" style="color: #fff;">
+                Complete Proscene UCC solutions
+            </h2> 
+            <div class="flex1 law-center">
+                <div class="images images-back2">
+                    <img src="" alt="" srcset="">
+                </div>
+    
+                <div class="flex1-words flex1-words-p law-center">
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                        Supplying law firms with reliable technology to ensure meetings run smoothly and feature modern capabilities isn’t the only thing we do. Proscene designs integrated UCC ecosystems that are easy to use, provide superior user and client experiences, and are compatible with the cloud-based collaboration solutions you prefer to use.
+                    </p>
+                    <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                        Partnering with top-quality brands, we provide solutions for law firms that include:
+                    </p>
+                        <ul>
+                            <li>> Smart cameras, smart microphones, and loudspeakers.</li>
+                            <li>> High-resolution displays and projectors.</li>
+                            <li>> Enhance your reputation with modern tools and capabilities.</li>
+                        </ul>
+                    
+                </div>
+            </div>
+        </div>
+        <h2 class="h2-offers text-center">
+            Benefits to your firm
+        </h2>
+        
+        <div class="wordsdigital-container">
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                Our team installs and configures solutions in your collaboration spaces. We make sure tools support common cloud-based conferencing platforms and can even train users on the new technology.
+            </p>
+            <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">
+                Our end-to-end management and preventive maintenance solution helps lower costs and improve your technology reliability.
+            </p>
+            <div class="wordsdigital">
+                <div class="cardd">
+                    <ul>
+                        <li>> Improve reliability and user experience.</li>
+                        <li>> Meet client needs with compatible technologies.</li>
+                        <li>> Enhance your reputation with modern tools and capabilities.</li>
+                        <li>> Attract and retain top legal talent with modern and efficient tools.</li>
+                        <li>> Achieve regulatory compliance and secure client information.</li>
+                    </ul>
+                </div>
+                    <div class="cardd">
+                        <ul>
+                            <li>> Augment your IT teams’ skill sets with specialized expertise and resources.</li>
+                            <li>> Managed services keep tools running as expected.</li>
+                            <li>> Standardize solutions to support growth and ease of use.</li>
+                            <li>> Enable interoperability between cloud-based UC platforms.</li>
+            
+                        </ul>
+                    </div>
+                </div>
+        </div>
+        <div class="partner-section">
+            <h3 class="h2-offers center pt-3 pb-4">We partner with leading collaboration providers
+            </h3>
+            <div class="partner-images pb-9">
+                <div class="container-p-img">
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/cisco.png" alt=center pt-7 pb-7 srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/CRESTRON.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Extron.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Google.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/logitech.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Microsof.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/neat.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Zoom.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/Poly.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                    <div class="center pt-7 pb-7">
+                        <img src="./assets/partners/QSYS.png" alt="" srcset="" class="w-100 partner-icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sub">
+            <h2 class="h2-offers center" style="color: white;">
+                Subscribe to our newsletter
+            </h2>
+
+            <div class="pt-7 center">
+
+                <form action="" class="form">
+                    <input type="email" name="email" id="" placeholder="Enter your email.">
+                    <a routerLink="" class="a-1">Notify</a>
+                </form>
+            </div>
+        </div>
+        <div class="flex1">
+            <div class="images images-back3">
+                <img src="" alt="" srcset="">
+            </div>
+            <div class="flex1-words flex1-words-p">
+                <h2 class="h2-offers">
+                    Latest products and innovations from Proscene
+                </h2>
+                <p class="pt-6  pb-6 width: 90%; padding-block p-solutions" style="padding-left: 0;">Complex concepts
+                    can be
+                    simplified using visual aids, making them
+                    easier for young learners to understand. Our solutions can provide clear, concise visual
+                    demonstrations
+                    to asssist in understanding.</p>
+                <a routerLink="" class="demo-button">Explore Proscene</a>
+                <div class=" pt-6 pb-6">
+                    <a routerLink="" class="padding-block flex1a " style="padding-left: 0;">Dicover more ></a>
+                </div>
+
+            </div>
+        </div>
+        <h2 class="h2-offers text-center">
+            Contact us!
+        </h2>
+        <app-contactform class="pb-9"></app-contactform>
+        <app-footer></app-footer>
+    </div>
